--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,12 @@ updates:
     directory: /
     schedule:
       interval: monthly
-      
+
   - package-ecosystem: npm
     directory: /
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
     schedule:
       interval: monthly
